# models/ResponseMessage.go
@@ -1,0 +1,7 @@
+package models
+
+//ResponseMessage general response
+type ResponseMessage struct {
+	ResponseDescription string `json:"ResponseDescription,omitempty"`
+	ResponseCode        string `json:"ResponseCode,omitempty"`
+}
